--- a/src/css/layout/header.scss
+++ b/src/css/layout/header.scss
@@ -3,9 +3,11 @@ header {
     margin-left: auto;
     margin-right: auto;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     .title {
-        margin-top: auto;
-        margin-bottom: auto;
+        // margin-top: auto;
+        // margin-bottom: auto;
         h2 {
             font-size:20px;
         }
@@ -17,8 +19,8 @@ header {
         }
     }
     .nav {
-        margin-top: auto;
-        margin-bottom: auto;
+        // margin-top: auto;
+        // margin-bottom: auto;
         ul {
             display: flex;
             flex-direction: row;
