--- a/style.css
+++ b/style.css
@@ -25,30 +25,26 @@ header {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  display: flex; }
-  header .title {
-    margin-top: auto;
-    margin-bottom: auto; }
-    header .title h2 {
-      font-size: 20px; }
-    header .title--green {
-      color: #2eca7f; }
-    header .title--grey {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  header .title h2 {
+    font-size: 20px; }
+  header .title--green {
+    color: #2eca7f; }
+  header .title--grey {
+    color: #424242; }
+  header .nav ul {
+    display: flex;
+    flex-direction: row; }
+  header .nav li {
+    color: #424242;
+    margin: 0 10px;
+    font-size: 14px;
+    list-style: none; }
+    header .nav li a {
+      text-decoration: none;
       color: #424242; }
-  header .nav {
-    margin-top: auto;
-    margin-bottom: auto; }
-    header .nav ul {
-      display: flex;
-      flex-direction: row; }
-    header .nav li {
-      color: #424242;
-      margin: 0 10px;
-      font-size: 14px;
-      list-style: none; }
-      header .nav li a {
-        text-decoration: none;
-        color: #424242; }
 
 .body {
   box-shadow: -1px 6px 10px 3px rgba(0, 0, 0, 0.14), 0 2px 0 rgba(0, 0, 0, 0.04);
